# rust_actix_ws

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/app/: mod.rs
src/app/value_object/: room.rs
src/app/ws/: mod.rs  socket_server.rs  socket_worker.rs
src/application/controllers/: mod.rs
src/application/controllers/v1/: room.rs  websocket.rs
src/domain/controllers/: health.rs  mod.rs
src/domain/controllers/v1/: handler.rs  mod.rs  websocket.rs
src/domain/ws/: socket_room.rs  socket_worker.rs
src/infra/repository/: mod.rs  room_repository.rs
